--- a/index.html
+++ b/index.html
@@ -6,14 +6,171 @@
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Naam van je site en/of pagina</title>
+	<title>Tele2</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 </head>
 
 <body>
-
 	<script src="scripts/script.js"></script>
+	<header>
+		<nav>
+			<li>Mobiel</li>
+			<li>Internet, TV & Bellen</li>
+			<li>Klantenservice</li>
+		</nav>
+		<a href="/">LOGIN</a>
+		<form action="search">ZOEKEN</form>
+		<a href="shopping-cart"></a>
+	</header>
+	<main>
+		<section id="s1">
+			<h1>SIM ONLY UNLIMITED</h1>
+			<ul>
+				<li>Unlimited Data/Bel/SMS</li>
+				<li>Streamen tot je een ons weegt</li>
+				<li>De beste dat vind je bij Tele2</li>
+			</ul>
+			<a href="/">Shop Sim Only</a>
+			<img src="/" alt="/">
+		</section>
+		<section id="s2">
+			<ul>
+				<li>
+					<a href="/">Smartphone abonnement</a>
+				</li>
+				<li>
+					<a href="/">Sim Only abonnoment</a>
+				</li>
+				<li>
+					<a href="/">Abonnoment verlengen</a>
+				</li>
+				<li>
+					<a href="/">Internet, TV & Bellen</a>
+				</li>
+			</ul>
+		</section>
+		<section id="s3">
+			<h1>APPLE IPHONE 11</h1>
+			<ul>
+				<li>Inclusief 1 jaar gratis Apple TV+</li>
+				<li>A13 Bionic processor</li>
+				<li>De beste deal vind je bij Tele2</li>
+			</ul>
+			<a href="/">Shop de iphone 11</a>
+			<img src="/" alt="/">
+		</section>
+		<section id="s4">
+			<h1>SAMNSUNG GALAXY S20</h1>
+			<ul>
+				<li>7GB & 200 Bel/SMS</li>
+				<li>40 MP selfie camera</li>
+				<li>Trek het internet helemaal leeg</li>
+			</ul>
+			<a href="/">Shop de Galaxy S20</a>
+			<img src="/" alt="/">
+		</section>
+		<section id="s5">
+			<h1>APPLE IPHONE SE</h1>
+			<ul>
+				<li>De nieuwste iphone</li>
+				<li>Inclusief 1 jaar gratis Apple TV+</li>
+				<li>Genadeloos lage prijs</li>
+			</ul>
+			<a href="/">Shop de iphone SE</a>
+			<img src="/" alt="/">
+		</section>
+		<section id="s6">
+			<h1>SAMSUNG GALAXY A51</h1>
+			<ul>
+				<li>5 camera's</li>
+				<li>7GB Data & 200 Bel/SMS</li>
+				<li>Trek't internet helemaal leeg</li>
+			</ul>
+			<a href="/">Shop de Galaxy A51</a>
+			<img src="/" alt="/">
+		</section>
+		<section id="s7">
+			<h1>INTERNET VANAF 20€ /MND</h1>
+			<ul>
+				<li>Eerste 6 maanden van €26,- voor €20,- per maand</li>
+				<li>Internet tot 20 MB/s inclusief wifi</li>
+				<li>Aleen internet, een slimme eigentijdse keuze</li>
+			</ul>
+			<a href="/">Shop internet Thuis</a>
+			<img src="/" alt="/">
+		</section>
+		<section id="s8">
+			<h1>TELE2 VRIENDENVOORDEEL</h1>
+			<p>Verdien samen met je vrienden bij Tele2! Ontvang voor iedere klant die je aandraagt beide €20,- met Vriendenvoordeel!</p>
+			<a href="/">Meer info</a>
+			<img src="/" alt="/"></section>
+		<section id="s8">
+			<ul>
+				<li>
+					<a href="/">Apple</a>
+				</li>
+				<li>
+					<a href="/">Samsung</a>
+				</li>
+				<li>
+					<a href="/">OPPO</a>
+				</li>
+				<li>
+					<a href="/">OnePlus</a>
+				</li>
+			</ul>
+		</section>
+	</main>
+	<footer>
+		<section>
+			<ul>
+				<h2>Mobiel</h2>
+				<li>Mobiel abonnement</li>
+				<li>Mobiele telefoons</li>
+				<li>obiel internet</li>
+				<li>Sim Only</li>
+				<li>Verlengen</li>
+			</ul>
+			<ul>
+				<h2>Thuis</h2>
+				<li>Internet, Bellen & TV</li>
+				<li>Internet & Bellen</li>
+				<li>Internet & TV</li>
+				<li>Internet</li>
+				<li>Postcodecheck</li>
+			</ul>
+			<ul>
+				<h2>Service</h2>
+				<li>Klantenservice</li>
+				<li>Contact</li>
+				<li>Storingen en onderhoud</li>
+			</ul>
+			<ul>
+				<h2>Social</h2>
+				<li>Forum</li>
+				<li>Twitter Tele2Nederland</li>
+				<li>Facebook Tele2Nederland</li>
+				<li>Blog</li>
+			</ul>
+		</section>
+		<section>
+			<ul>
+				<li>Sitemap</li>
+				<li>Voorwaarden</li>
+				<li>Disclamer</li>
+				<li>Privacy Policy</li>
+				<li>Cookies</li>
+				<li>Veiligheid</li>
+				<li>Affiliate worden</li>
+				<li>Werken bij Tele2</li>
+				<li>Wholesale</li>
+				<li>SMS gedragcode</li>
+				<li>Emoji</li>
+				<li>Over ons</li>
+			</ul>
+			<p>Copyright Tele2 Nederland</p>
+		</section>
+	</footer>
 </body>
-	
 </html>
