--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
 	<script src="scripts/script.js"></script>
 	<header>
+		<a href="/">
+			<img id="logo" src="images/tele2-logo.png" alt="tele2-logo">
+		</a>
 		<nav>
 			<li>Mobiel</li>
 			<li>Internet, TV & Bellen</li>
