--- a/index.html
+++ b/index.html
@@ -12,28 +12,25 @@
 </head>
 
 <body>
-	
 	<header>
-		<nav id="header-nav-mobiel">
-			<a class="link-header" href="/">
-				<img id="nav-logo" src="images/tele2-logo.png" alt="tele2-logo">
-			</a>
+		<nav>
+			<a id="link-logo" href="/"><img id="nav-logo" src="images/tele2-logo.png" alt="tele2-logo"></a> 
 			<a class="link-header" href="/">Login</a>
 			<form action="search">Zoeken</form>
 			<a class="link-header" href="/">Mandje</a>
 		</nav>
-		<nav id="hamburger-menu">
-			<ul id="nav-ul">
-				<li>Mobiel</li>
-				<li>Internet, TV & Bellen</li>
-				<li>Klantenservice</li>
-			</ul>
-		</nav>
+		<input class="menu-button" type="checkbox" id="menu-button">
+		<label class="menu-icon" for="menu-button"><span id="nav-icon"></span></label>
+		<ul id="header-ul">
+			<li class="inHamburger"><a class="link-header" href="/">Mobiel</a></li>
+			<li class="inHamburger"><a class="link-header" href="/">Internet, TV & Bellen</a></li>
+			<li class="inHamburger"><a class="link-header" href="/">Klantenservice</a></li>
+		</ul>
 	</header>
 	<main>
-		<section id="s1">
-			<h1 id="h1s1">SIM ONLY <br> <span style="color: gold">UNLIMITED</span></h1>
-			<ul id="uls1">
+		<section>
+			<h1>SIM ONLY <br> <span style="color: rgba(254,215,8,1)">UNLIMITED</span></h1>
+			<ul>
 				<li>Unlimited Data/Bel/SMS</li>
 				<li>Streamen tot je een ons weegt</li>
 				<li>De beste dat vind je bij Tele2</li>
@@ -42,91 +39,72 @@
 			<a id="section1-link" href="/">Shop Sim Only</a>
 		</section>
 		<section id="s2">
-			<ul id="uls2">
-				<li id="li1s2">
-					<a class="as2" href="/">Smartphone abonnement</a>
-				</li>
-				<li id="li2s2">
-					<a class="as2" href="/">Sim Only abonnoment</a>
-				</li>
-				<li id="li3s2">
-					<a class="as2" href="/">Abonnoment verlengen</a>
-				</li>
-				<li id="li4s2">
-					<a class="as2" href="/">Internet, TV & Bellen</a>
-				</li>
-			</ul>
+			<a class="as2" href="/">Smartphone abonnement</a>
+			<a class="as2" href="/">Sim Only abonnoment</a>
+			<a class="as2" href="/">Abonnoment verlengen</a>
+			<a class="as2" href="/">Internet, TV & Bellen</a>
 		</section>
 		<section id="s3">
-			<h1>APPLE IPHONE 11</h1>
+			<h1>APPLE<br> <span style="color: rgba(36,94,210,1)">IPHONE 11</h1>
 			<ul>
 				<li>Inclusief 1 jaar gratis Apple TV+</li>
 				<li>A13 Bionic processor</li>
 				<li>De beste deal vind je bij Tele2</li>
 			</ul>
-			<img src="/" alt="/">
-			<a href="/">Shop de iphone 11</a>
+			<img id="iphone11-img" src="images/iphone11-img.png" alt="iphone11-img">
+			<a id="section3-link" href="/">Shop de iphone 11</a>
 		</section>
 		<section id="s4">
-			<h1>SAMNSUNG GALAXY S20</h1>
+			<h1>SAMNSUNG <br> <span style="color: rgba(36,94,210,1)">GALAXY S20</h1>
 			<ul>
 				<li>7GB & 200 Bel/SMS</li>
 				<li>40 MP selfie camera</li>
 				<li>Trek het internet helemaal leeg</li>
 			</ul>
-			<img src="/" alt="/">
-			<a href="/">Shop de Galaxy S20</a>
+			<img id="galaxy-s20-img" src="images/galaxy-s20-img.png" alt="galaxy-s20-img">
+			<a id="section4-link" href="/">Shop de Galaxy S20</a>
 		</section>
 		<section id="s5">
-			<h1>APPLE IPHONE SE</h1>
+			<h1>APPLE <br> <span style="color: rgba(254,215,8,1)">IPHONE SE</h1>
 			<ul>
 				<li>De nieuwste iphone</li>
 				<li>Inclusief 1 jaar gratis Apple TV+</li>
 				<li>Genadeloos lage prijs</li>
 			</ul>
-			<img src="/" alt="/">
-			<a href="/">Shop de iphone SE</a>
+			<img id="iphoneSE-img" src="images/iphoneSE-img.png" alt="iphoneSE-img">
+			<a id="section5-link" href="/">Shop de iphone SE</a>
 		</section>
 		<section id="s6">
-			<h1>SAMSUNG GALAXY A51</h1>
+			<h1>SAMSUNG <br> <span style="color: rgba(36,94,210,1)">GALAXY A51</h1>
 			<ul>
 				<li>5 camera's</li>
 				<li>7GB Data & 200 Bel/SMS</li>
 				<li>Trek't internet helemaal leeg</li>
 			</ul>
-			<img src="/" alt="/">
-			<a href="/">Shop de Galaxy A51</a>
+			<img id="samsung-a51-img" src="images/samsung-a51-img.png" alt="samsung-a51-img">
+			<a id="section6-link" href="/">Shop de Galaxy A51</a>
 		</section>
 		<section id="s7">
-			<h1>INTERNET VANAF 20€ /MND</h1>
+			<h1>INTERNET VANAF <br> <span style="color: rgba(36,94,210,1)">20€ /MND</h1>
 			<ul>
 				<li>Eerste 6 maanden van €26,- voor €20,- per maand</li>
 				<li>Internet tot 20 MB/s inclusief wifi</li>
 				<li>Aleen internet, een slimme eigentijdse keuze</li>
 			</ul>
-			<img src="/" alt="/">
-			<a href="/">Shop internet Thuis</a>
+			<img id="internet-vanaf20-img" src="images/internet-vanaf20-img.png" alt="internet-vanaf20-img">
+			<a id="section7-link" href="/">Shop internet Thuis</a>
 		</section>
 		<section id="s8">
-			<h1>TELE2 VRIENDENVOORDEEL</h1>
+			<h1>TELE2 <br> <span style="color: rgba(254,215,8,1)">VRIENDENVOORDEEL</h1>
 			<p>Verdien samen met je vrienden bij Tele2! Ontvang voor iedere klant die je aandraagt beide €20,- met Vriendenvoordeel!</p>
-			<a href="/">Meer info</a>
-			<img src="/" alt="/"></section>
-		<section id="s8">
-			<ul>
-				<li>
-					<a href="/">Apple</a>
-				</li>
-				<li>
-					<a href="/">Samsung</a>
-				</li>
-				<li>
-					<a href="/">OPPO</a>
-				</li>
-				<li>
-					<a href="/">OnePlus</a>
-				</li>
-			</ul>
+			<img id="vriendenvoordeel-img" src="images/vriendenvoordeel-img.png" alt="vriendenvoordeel-img">
+			<a id="section8-link" href="/">Meer info</a>
+		</section>
+		<section id="s9">
+			<a class="as9" href="/">Apple</a>
+			<a class="as9" href="/">Samsung</a>
+			<a class="as9" href="/">OPPO</a>
+			<a class="as9" href="/">OnePlus</a>
 		</section>
 	</main>
 	<footer>
