--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
 			<a class="link-header" href="/">Login</a>
 			<form action="search">Zoeken</form>
 			<a class="link-header" href="/">Mandje</a>
+			<button><img src="images/Hamburger-icon.png" alt="hamburger"></button>
 		</nav>
-		<input class="menu-button" type="checkbox" id="menu-button">
-		<label class="menu-icon" for="menu-button"><span id="nav-icon"></span></label>
 		<ul id="header-ul">
-			<li class="inHamburger"><a class="link-header" href="/">Mobiel</a></li>
-			<li class="inHamburger"><a class="link-header" href="/">Internet, TV & Bellen</a></li>
-			<li class="inHamburger"><a class="link-header" href="/">Klantenservice</a></li>
+			<li><a class="link-header" href="/">Mobiel</a></li>
+			<li><a class="link-header" href="/">Internet, TV & Bellen</a></li>
+			<li><a class="link-header" href="/">Klantenservice</a></li>
+			<li><a class="link-header" href="/">Login</a></li>
+			<li><a class="link-header" href="/">Zoeken</a></li>
+			<li><a class="link-header" href="/">Winkelmand</a></li>
+			<li><a class="link-header" href="/">Webmail</a></li>
 		</ul>
 	</header>
 	<main>
@@ -111,40 +114,42 @@
 		<section>
 			<ul>
 				<li>
-					<h2>Mobiel</h2>
+					<button>Mobiel</button>
+					<ul>
+						<li>Mobiel abonnement</li>
+						<li>Mobiele telefoons</li>
+						<li>Mobiel internet</li>
+						<li>Sim Only</li>
+						<li>Verlengen</li>
+					</ul>
 				</li>
-				<li>Mobiel abonnement</li>
-				<li>Mobiele telefoons</li>
-				<li>obiel internet</li>
-				<li>Sim Only</li>
-				<li>Verlengen</li>
-			</ul>
-			<ul>
 				<li>
-					<h2>Thuis</h2>
+					<button>Thuis</button>
+					<ul>
+						<li>Internet, Bellen & TV</li>
+						<li>Internet & Bellen</li>
+						<li>Internet & TV</li>
+						<li>Internet</li>
+						<li>Postcodecheck</li>
+					</ul>
 				</li>
-				<li>Internet, Bellen & TV</li>
-				<li>Internet & Bellen</li>
-				<li>Internet & TV</li>
-				<li>Internet</li>
-				<li>Postcodecheck</li>
-			</ul>
-			<ul>
 				<li>
-					<h2>Service</h2>
+					<button>Service</button>
+					<ul>
+						<li>Klantenservice</li>
+						<li>Contact</li>
+						<li>Storingen en onderhoud</li>
+					</ul>
 				</li>
-				<li>Klantenservice</li>
-				<li>Contact</li>
-				<li>Storingen en onderhoud</li>
-			</ul>
-			<ul>
 				<li>
-					<h2>Social</h2>
+					<button>Social</button>
+					<ul>
+						<li>Forum</li>
+						<li>Twitter Tele2Nederland</li>
+						<li>Facebook Tele2Nederland</li>
+						<li>Blog</li>	
+					</ul>
 				</li>
-				<li>Forum</li>
-				<li>Twitter Tele2Nederland</li>
-				<li>Facebook Tele2Nederland</li>
-				<li>Blog</li>
 			</ul>
 		</section>
 		<section>
