--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 			<li><a class="link-header" href="/">Mobiel</a></li>
 			<li><a class="link-header" href="/">Internet, TV & Bellen</a></li>
 			<li><a class="link-header" href="/">Klantenservice</a></li>
-			<li><a class="link-header" href="/">Login</a></li>
-			<li><a class="link-header" href="/">Zoeken</a></li>
-			<li><a class="link-header" href="/">Winkelmand</a></li>
-			<li><a class="link-header" href="/">Webmail</a></li>
+			<li class="niet-in-desktop"><a class="link-header" href="/">Login</a></li>
+			<li class="niet-in-desktop"><a class="link-header" href="/">Zoeken</a></li>
+			<li class="niet-in-desktop"><a class="link-header" href="/">Winkelmand</a></li>
+			<li class="niet-in-desktop"><a class="link-header" href="/">Webmail</a></li>
 		</ul>
 	</header>
 	<main>
@@ -42,13 +42,14 @@
 			<a id="section1-link" href="/">Shop Sim Only</a>
 		</section>
 		<section id="s2">
+			<h2>Section2</h2>
 			<a class="as2" href="/">Smartphone abonnement</a>
 			<a class="as2" href="/">Sim Only abonnoment</a>
 			<a class="as2" href="/">Abonnoment verlengen</a>
 			<a class="as2" href="/">Internet, TV & Bellen</a>
 		</section>
 		<section id="s3">
-			<h1>APPLE<br> <span style="color: rgba(36,94,210,1)">IPHONE 11</h1>
+			<h1>APPLE<br> <span style="color: rgba(36,94,210,1)">IPHONE 11</span></h1>
 			<ul>
 				<li>Inclusief 1 jaar gratis Apple TV+</li>
 				<li>A13 Bionic processor</li>
@@ -58,7 +59,7 @@
 			<a id="section3-link" href="/">Shop de iphone 11</a>
 		</section>
 		<section id="s4">
-			<h1>SAMNSUNG <br> <span style="color: rgba(36,94,210,1)">GALAXY S20</h1>
+			<h1>SAMNSUNG <br> <span style="color: rgba(36,94,210,1)">GALAXY S20</span></h1>
 			<ul>
 				<li>7GB & 200 Bel/SMS</li>
 				<li>40 MP selfie camera</li>
@@ -68,7 +69,7 @@
 			<a id="section4-link" href="/">Shop de Galaxy S20</a>
 		</section>
 		<section id="s5">
-			<h1>APPLE <br> <span style="color: rgba(254,215,8,1)">IPHONE SE</h1>
+			<h1>APPLE <br> <span style="color: rgba(254,215,8,1)">IPHONE SE</span></h1>
 			<ul>
 				<li>De nieuwste iphone</li>
 				<li>Inclusief 1 jaar gratis Apple TV+</li>
@@ -78,7 +79,7 @@
 			<a id="section5-link" href="/">Shop de iphone SE</a>
 		</section>
 		<section id="s6">
-			<h1>SAMSUNG <br> <span style="color: rgba(36,94,210,1)">GALAXY A51</h1>
+			<h1>SAMSUNG <br> <span style="color: rgba(36,94,210,1)">GALAXY A51</span></h1>
 			<ul>
 				<li>5 camera's</li>
 				<li>7GB Data & 200 Bel/SMS</li>
@@ -88,7 +89,7 @@
 			<a id="section6-link" href="/">Shop de Galaxy A51</a>
 		</section>
 		<section id="s7">
-			<h1>INTERNET VANAF <br> <span style="color: rgba(36,94,210,1)">20€ /MND</h1>
+			<h1>INTERNET VANAF <br> <span style="color: rgba(36,94,210,1)">20€ /MND</span></h1>
 			<ul>
 				<li>Eerste 6 maanden van €26,- voor €20,- per maand</li>
 				<li>Internet tot 20 MB/s inclusief wifi</li>
@@ -98,12 +99,13 @@
 			<a id="section7-link" href="/">Shop internet Thuis</a>
 		</section>
 		<section id="s8">
-			<h1>TELE2 <br> <span style="color: rgba(254,215,8,1)">VRIENDENVOORDEEL</h1>
+			<h1>TELE2 <br> <span style="color: rgba(254,215,8,1)">VRIENDENVOORDEEL</span></h1>
 			<p>Verdien samen met je vrienden bij Tele2! Ontvang voor iedere klant die je aandraagt beide €20,- met Vriendenvoordeel!</p>
 			<img id="vriendenvoordeel-img" src="images/vriendenvoordeel-img.png" alt="vriendenvoordeel-img">
 			<a id="section8-link" href="/">Meer info</a>
 		</section>
 		<section id="s9">
+			<h2>Section9</h2>
 			<a class="as9" href="/">Apple</a>
 			<a class="as9" href="/">Samsung</a>
 			<a class="as9" href="/">OPPO</a>
@@ -112,6 +114,7 @@
 	</main>
 	<footer>
 		<section>
+			<h2>footerSection1</h2>
 			<ul>
 				<li>
 					<button>Mobiel</button>
@@ -153,6 +156,7 @@
 			</ul>
 		</section>
 		<section>
+			<h2>footerSection2</h2>
 			<ul>
 				<li>Sitemap</li>
 				<li>Voorwaarden</li>
