--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 	<main>
 		<section id="pagina2-S1">
 			<p>Home > MIJN TELE2</p>
-			<h1>INLOGGEN BIJ <span>MIJNTELE2</span></h1>
+			<h1>INLOGGEN BIJ <span class="typing">MIJNTELE2</span></h1>
 			<p>Kies het product waarvoor je wilt inloggen.</p>
 			<section>
 				<h2>buttonsInSection1</h2>
