--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<li><a class="link-header" href="/">Mobiel</a></li>
 			<li><a class="link-header" href="/">Internet, TV & Bellen</a></li>
 			<li><a class="link-header" href="/">Klantenservice</a></li>
-			<li class="niet-in-desktop"><a class="link-header" href="/">Login</a></li>
+			<li class="niet-in-desktop"><a class="link-header" href="index2.html">Login</a></li>
 			<li class="niet-in-desktop"><a class="link-header" href="/">Zoeken</a></li>
 			<li class="niet-in-desktop"><a class="link-header" href="/">Winkelmand</a></li>
 			<li class="niet-in-desktop"><a class="link-header" href="/">Webmail</a></li>
